--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -17,12 +17,16 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9", "3.10"]
+
     steps:
     - uses: actions/checkout@v3
-    - name: Set up
+    - name: Set up ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
