SNOW-1023673 Implement common encode and serialize methods using OTEL v0.12.0

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -43,4 +43,5 @@ jobs:
         pip install .
     - name: Test with pytest
       run: |
+        pip install ./tests/snowflake-telemetry-test-utils
         pytest
