--- a/anaconda/meta.yaml
+++ b/anaconda/meta.yaml
@@ -1,6 +1,6 @@
 package:
     name: snowflake_telemetry_python
-    version: "0.2.0"
+    version: "0.2.1.dev"
 
 source:
     path: /tmp/anaconda_workspace/src
