--- a/anaconda/meta.yaml
+++ b/anaconda/meta.yaml
@@ -1,6 +1,6 @@
 package:
     name: snowflake_telemetry_python
-    version: "0.4.0.dev"
+    version: "0.4.0"
 
 source:
     path: {{ environ.get('SNOWFLAKE_TELEMETRY_DIR') }}
