--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{38,39,310,311},protobuf-v{3,4,5}
+envlist = py{38,39,310,311},protobuf-v{3,4,5},no-protobuf,codegen,marshaler
 
 [testenv]
 description = Run tests
@@ -7,7 +7,7 @@ deps =
     .
     ./tests/snowflake-telemetry-test-utils
 commands =
-    pytest tests/test_all_implementations.py
+    pytest --ignore=tests/test_proto_serialization.py --ignore=tests/test_protoc_plugin.py
 
 [testenv:protobuf-v{3,4,5}]
 description = Run tests with protobuf versions
@@ -18,4 +18,30 @@ deps =
     v4: protobuf>=4,<5
     v5: protobuf>=5,<6
 commands =
-    pytest tests/test_all_implementations.py
+    pytest --ignore=tests/test_proto_serialization.py --ignore=tests/test_protoc_plugin.py
+
+[testenv:no-protobuf]
+description = Run tests without protobuf
+setenv =
+    SNOWFLAKE_TELEMETRY_NO_PROTOBUF = 1
+deps =
+    .
+    ./tests/snowflake-telemetry-test-utils
+commands =
+    pytest --ignore=tests/test_proto_serialization.py --ignore=tests/test_protoc_plugin.py
+
+[testenv:codegen]
+description = Run codegen tests
+deps =
+    .
+    ./tests/snowflake-telemetry-test-utils[code-gen]
+commands =
+    pytest tests/test_protoc_plugin.py
+
+[testenv:marshaler]
+description = Run marshaler tests
+deps =
+    .
+    ./tests/snowflake-telemetry-test-utils
+commands =
+    pytest tests/test_proto_serialization.py
