--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -50,3 +50,9 @@ jobs:
       run: |
         pip install "./tests/snowflake-telemetry-test-utils[all]"
         pytest
+    - name: Test with tox
+      run: |
+        version="${{ matrix.python-version }}"
+        version_without_dot="${version//./}"
+        pip install tox
+        env TOX_SKIP_ENV='^(?!py'"$version_without_dot"'-)' tox
