--- a/anaconda/meta.yaml
+++ b/anaconda/meta.yaml
@@ -1,9 +1,18 @@
 package:
     name: snowflake_telemetry_python
-    version: "0.6.0.dev"
+    version: "0.6.0"
 
 source:
     path: {{ environ.get('SNOWFLAKE_TELEMETRY_DIR') }}
+
+build:
+    noarch: python
+    string: "py38_0"  # [py==38]
+    string: "py39_0"  # [py==39]
+    string: "py310_0"  # [py==310]
+    string: "py311_0"  # [py==311]
+    string: "py312_0"  # [py==312]
+    string: "py313_0"  # [py==313]
 
 requirements:
     build:
