--- a/anaconda/meta.yaml
+++ b/anaconda/meta.yaml
@@ -1,6 +1,6 @@
 package:
     name: snowflake-telemetry-python
-    version: "0.7.0"
+    version: "0.7.1.dev"
 
 source:
     path: {{ environ.get('SNOWFLAKE_TELEMETRY_DIR') }}
